--- a/index.html
+++ b/index.html
@@ -1,9 +1,119 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tea Cozy</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
 <body>
-  <h1>Kyle Johnson/h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <img src="img-tea-cozy-logo.webp" alt="Tea Cozy">
+            </div>
+            <div class="nav">
+                <p><a href="#">Mission</a></p>
+                <p><a href="#">Featured Tea</a></p>
+                <p><a href="#">Locations</a></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="top-section">
+        <div class="ourmission">
+            <div class="ourmission-headers">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic
+                    Tea
+                </h4>
+            </div>
+        </div>
+    </div>
+
+    <div class="middle-section">
+        <div class="teaofthemonth">
+            <div class="tea-headers">
+                <h2>Tea of the Month</h2>
+                <h4>What's Steeping at The Tea Cozy?</h4>
+            </div>
+            <div class="teas">
+                <div class="berryblitz">
+                    <img src="img-berryblitz.webp" alt="Fall Berry Blitz Tea">
+                    <p>Fall Berry Blitz Tea</p>
+                </div>
+                <div class="spicedrum">
+                    <img src="img-spiced-rum.webp" alt="Spiced Rum Tea">
+                    <p>Spiced Rum Tea</p>
+                </div>
+                <div class="seasonaldonuts">
+                    <img src="img-donut.webp" alt="Seasonal Donuts">
+                    <p>Seasonal Donuts</p>
+                </div>
+                <div class="myrtleave">
+                    <img src="img-myrtle-ave.webp" alt="Myrtle Ave Tea">
+                    <p>Myrtle Ave Tea</p>
+                </div>
+                <div class="bedfordbizarre">
+                    <img src="img-bedford-bizarre.webp" alt="Bedford Bizarre Tea">
+                    <p>Bedford Bizarre Tea</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bottom-section">
+        <div class="locations-main">
+            <div class="location-header">
+                <h2>Locations</h2>
+            </div>
+            <div class="locations">
+                <div class="downtown">
+                    <div class="address">
+                        <h3>Downtown</h3>
+                        <p>384 West 4th St</p>
+                        <p>Suite 108</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                </div>
+                <div class="eastbayside">
+                    <div class="address">
+                        <h3>East Bayside</h3>
+                        <p>3433 Phiserman's Avenue</p>
+                        <p>(Northwest Corner)</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                </div>
+                <div class="oakdale">
+                    <div class="address">
+                        <h3>Oakdale</h3>
+                        <p>515 Crescent Avenue</p>
+                        <p>Second Floor</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-section">
+        <div class="upper-footer">
+            <div class="teacozyinfo">
+                <h2>The Tea Cozy</h2>
+                <h5>contact@theteacozy.com</h5>
+                <p>917-555-8904
+                <p>
+            </div>
+        </div>
+        <div class="bottom-footer">
+            <p>copyright The Tea Cozy 2017</p>
+        </div>
+    </div>
+
+    </div>
+
 </body>
 
 </html>
